# RODEO

./: DEPLOYMENT-CONFIG.md  LICENSE.md  README.md
blockchain-network/: README.md
blockchain-network/ganache-docker/: Dockerfile  README.md  docker-compose.yml  ganache_keys.txt
blockchain-network/smart-contracts/: .env  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
dao-bridge/: README.md
dao-bridge/org-web/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  dockerignore  nginx.conf  org-web-docker.sh  supervisord.conf
dao-bridge/ros-eth-bridge/: README.md
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/: CMakeLists.txt  package.xml
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/launch/: ros_eth_gateway.launch
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/scripts/: show_balances.py  smoke_check.py
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/src/: abi_loader.py  dao_listener_node.py  dao_writer_node.py
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/src/eth/: contracts.py  provider.py
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/src/eth/dao/: __init__.py  service_ops.py  task_ops.py  token_ops.py
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_bridge/src/eth/events/: __init__.py  checkpoint.py  decoder.py  poller.py
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_msgs/: CMakeLists.txt
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_msgs/msg/: ServiceId.msg  ServiceInfo.msg  TaskAssignment.msg  TaskId.msg  TaskMeta.msg  TaskRegistered.msg  TxStatus.msg
dao-bridge/ros-eth-bridge/catkin_ws/src/ros_eth_msgs/srv/: GetAllServices.srv  GetAllowance.srv  GetService.srv  GetServicesByCreator.srv  GetTasksByCreator.srv
dao-bridge/ros-eth-bridge/docker/catkin_ws/src/ros_eth_msgs/: package.xml
dao-bridge/ros-eth-bridge/docker/catkin_ws/src/ros_eth_msgs/action/: ActivateTask.action  ApproveSpender.action  RegisterService.action  RegisterTask.action  RemoveService.action  SetServiceBusy.action  SubmitProof.action  TransferToken.action
dao-bridge/ros-eth-bridge/docker/catkin_ws/src/ros_eth_msgs/msg/: ServiceBusy.msg  ServiceMeta.msg  TaskInfo.msg  TaskRejection.msg
dao-bridge/ros-eth-bridge/docker/catkin_ws/src/ros_eth_msgs/srv/: GetAllTasks.srv  GetBalance.srv  GetServiceMeta.srv  GetTask.srv  GetTaskMeta.srv
oracle/: README.md  addresses-ganache.json  addresses.json  oracle_ros1.py  oracle_rosbag_validator.py  power_logger.py
oracle/docker/: .dockerignore  .env  .env.example  CONFIG-UPDATE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  entrypoint.sh  oracle-docker.sh  requirements.txt
oracle/oracle_node/: README.md  addresses.json  controller.py  events.py  main.py  power_csv.py  settings.py  task_manager.py  utils.py
oracle/proofs/: README.md
quick-start/: QUICK_REFERENCE.md  README.md  TUTORIAL_FULL_DEMO.md  robot_emulator_demo.py
quick-start/__pycache__/: ros_eth_interface.py
quick-start/docker/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  (+2 more)
scripts/: update-addresses.sh
(+130 files in other folders)
