<?xml version="1.0"?>
<package format="2">
  <name>ros_eth_bridge</name>
  <version>0.0.1</version>
  <description>ROS Noetic to Ethereum bridge</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ros_eth_msgs</depend>
  <export/>
</package>
