<?xml version="1.0"?>
<package format="2">
  <name>ros_eth_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services, and actions for the ROS to Ethereum bridge</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
